--- a/index.html
+++ b/index.html
@@ -27,14 +27,17 @@
   </header>
 
   <main>
-    <section id="hero" class="section hero">
-      <div class="container">
-        <h2 id="hero-title">Тема конференции</h2>
-        <p id="hero-desc">Краткое описание — здесь будет ваш текст на трёх языках.</p>
-        <p class="meta" id="hero-meta">Дата • Место</p>
-        <a href="#program" class="btn" id="hero-cta">Узнать программу</a>
-      </div>
-    </section>
+    <section id="hero" class="hero">
+  <div class="hero-overlay">
+    <div class="container">
+      <h2 id="hero-title">Digitalization of Education in the Era of AI</h2>
+      <p id="hero-desc">Международная научно-практическая конференция</p>
+      <p class="meta" id="hero-meta">📅 2025 • Алматы</p>
+      <a href="#program" class="btn" id="hero-cta">Узнать программу</a>
+    </div>
+  </div>
+</section>
+
 
     <section id="about" class="section">
       <div class="container">
