--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 <body>
   <header class="site-header">
     <div class="container header-inner">
-      <div class="brand">
-        <!-- Можно вставить логотип из Figma -->
-        <h1 id="site-title">Digitalization of Education in the Era of AI</h1>
-        <p id="site-subtitle">Конференция / Conference</p>
-      </div>
+    <div class="brand">
+  <img src="assets/images/001.png" alt="AlmaU logo" class="logo" />
+  <div class="brand-text">
+    <h1 id="site-title">Digitalization of Education in the Era of AI</h1>
+    <p id="site-subtitle">Международная научно-практическая конференция</p>
+  </div>
+</div>
+
 
       <nav class="top-controls" aria-label="Language and actions">
         <div class="lang-switch" role="tablist" aria-label="Выбор языка">
