--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 
 
       <nav class="top-controls" aria-label="Language and actions">
+        <a href="#registration" class="cta" id="register-btn">О конференции</a>
+        <a href="#registration" class="cta" id="register-btn">Темы</a>
+        <a href="#registration" class="cta" id="register-btn">Спикеры</a>
         <div class="lang-switch" role="tablist" aria-label="Выбор языка">
           <button class="lang-btn" data-lang="ru" aria-selected="true">RU</button>
           <button class="lang-btn" data-lang="kz">KZ</button>
