--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
     <section id="hero" class="hero">
       <div class="hero-overlay">
         <div class="container">
+           <p id="hero-desc" data-i18n="hero-desc">Международная научно-практическая конференция</p>
           <h2 id="hero-title" data-i18n="hero-title">Digitalization of Education in the Era of AI</h2>
-          <p id="hero-desc" data-i18n="hero-desc">Международная научно-практическая конференция</p>
-          <p class="meta" id="hero-meta" data-i18n="hero-meta">📅 2025 • Алматы</p>
+         
+          <p class="meta" id="hero-meta" data-i18n="hero-meta">📅 Алматы, Казахстан 17-18 марта 2026</p>
           <a href="#registration" class="btn" id="register-btn" data-i18n="register-btn">Зарегистрироваться</a>
           <a href="#program" class="btn" id="hero-cta" data-i18n="hero-cta">Узнать программу</a>
         </div>
