--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header class="site-header">
     <div class="container header-inner">
       <div class="brand">
-        <img src="assets/images/001.png" alt="AlmaU logo" class="logo" />
+        <img src="assets/images/logo__footer.png" alt="AlmaU logo" class="logo" />
       </div>
 
       <nav class="main-nav">
