--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
   <div class="about-info-header">
     <h2>О КОНФЕРЕНЦИИ</h2>
     <p>
-      Конференция направлена на создание международной площадки для обсуждения того, как цифровизация и искусственный интеллект влияют на систему образования, учебный процесс и управление знаниями.<br>
-      Участники смогут поделиться опытом, обсудить современные подходы и инструменты, а также определить пути развития цифровых компетенций преподавателей.
+     Конференция направлена на создание международной площадки для обсуждения того, как цифровизация и искусственный интеллект влияют на систему образования, учебный процесс и управление знаниями.  </p>
+
+<p>Участники смогут поделиться опытом, обсудить современные подходы и инструменты, а также определить пути развития цифровых компетенций преподавателей.
     </p>
   </div>
   <div class="about-info-combo-container">
