--- a/index.html
+++ b/index.html
@@ -154,17 +154,22 @@
       <div class="speaker-card">
         <img src="assets\images\Speak 3.png" class="speakers-circle"/>
         <h4>Чошанов Мурат</h4>
-        <p>Член - корреспондент Российской академии естествознания, доктор педагогических наук, профессор, Техасский Университет Эль Пасо</p>
+        <p>Д.п.н, профессор Университета Техаса в Эль-Пасо (США). Ведущий исследователь в области инженерии обучения, цифровой дидактики и интеграции ИИ в образование. Автор концепции «дидактической инженерии обучения», более 200 публикаций. 
+Его исследования направлены на развитие AI-ориентированных педагогических практик, цифровизацию обучения и подготовку учителей нового поколения в эпоху ИИ</p>
       </div>
       <div class="speaker-card addl" style="display: none;">
         <img src="assets\images\Speak 4.png" class="speakers-circle"/>
         <h4>Кристоф Феньвеши</h4>
-        <p>Доктор философских наук, исследователь STEAM-образования, Университет Ювяскюля, Финляндия</p>
+        <p>исследователь STEAM-образования и междисциплинарного обучения в Финском институте образовательных исследований Университета Ювяскюля (Финляндия).
+Adjunct Professor в университетах Кореи, Индонезии и Италии, член Европейской академии наук и искусств.
+Директор международного сообщества Bridges Organization, соучредитель Experience Workshop – Global STEAM Network.
+Эксперт Европейской комиссии по программам Horizon и Erasmus+.
+Его исследования посвящены интеграции науки и искусства, феномен-ориентированному и игровому обучению, STEAM-педагогике и междисциплинарным образовательным подходам.</p>
       </div>
       <div class="speaker-card addl" style="display: none;">
-        <div class="speakers-circle"></div>
-        <h4>Имя Спикера 5</h4>
-        <p>Описание спикера 5</p>
+        <img src="assets\images\Speak 5.png" class="speakers-circle"/>
+        <h4>Эзза Мад Багури</h4>
+        <p>Старший преподаватель, Международный университет INTI, Малайзия.</p>
       </div>
       <div class="speaker-card addl" style="display: none;">
         <div class="speakers-circle"></div>
